# anchor-solana-learning

calculator/: Anchor.toml
calculator/programs/calculator/src/: lib.rs
calculator/tests/: calculator.ts
chainlink-exchange-rate/: Anchor.toml
chainlink-exchange-rate/programs/chainlink-exchange-rate/: Cargo.toml
chainlink-exchange-rate/programs/chainlink-exchange-rate/src/: lib.rs
chainlink-exchange-rate/tests/: chainlink-exchange-rate.ts
crowdfunding/: .gitignore  Anchor.toml
crowdfunding/frontend/: package-lock.json  package.json
crowdfunding/frontend/src/: App.js  idl.json
crowdfunding/programs/crowdfunding/src/: lib.rs
crowdfunding/tests/: crowdfunding.ts
giphy/: Anchor.toml
giphy/frontend/: index.html  package-lock.json  vite.config.js
giphy/frontend/src/: App.jsx  gif_account.json  idl.json
giphy/programs/giphy/: Cargo.toml
giphy/programs/giphy/src/: lib.rs
giphy/tests/: giphy.ts
